# sos-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: architect.md  worker.md
agents/: README.md  architect.md  orchestrator.md  worker.md
bootstrap/sos-rs/: Cargo.toml  README.md
bootstrap/sos-rs/src/: main.rs  state.rs
bootstrap/sos-rs/src/commands/: apply.rs  blueprint.rs  contract.rs  init.rs  launch.rs  mod.rs  recipe.rs  status.rs
configs/: flask.toml  nextjs.toml  python.toml  rust.toml
docs/: BACKLOG.md  COMPARISON.md  DISCOVERIES.md  GENESIS.md  HANDOFF.md  LAYERS.md  ORCHESTRATION.md  PHILOSOPHY.md  SETUP.md
docs/archive/: DISCOVERIES_pre-2026-05.md
docs/discoveries/: P038.md  P039.md
docs/ticket/: P001-architect-worker-debate.md  P003-backlog-format-flexibility.md  P004-vision-doc-naming-flex.md
hooks/: pre-commit
integrations/github-actions/: canary.yml
integrations/jarvis/: uptime_monitor.py
phieu/: AUDIT_PROTOCOL.md  DISCOVERY_PROTOCOL.md  GENESIS_TEMPLATE.md  LAUNCH_CHECKLIST.md  README.md  RELAY_PROTOCOL.md  TICKET_TEMPLATE.md  phieu.sh
phieu/VISION_TEMPLATES/: CHARACTER_template.md  DESIGN_SPEC_template.md  PROJECT_template.md  SOUL_template.md  TEST_CASES_template.md  VOICE_template.md
phieu/active/: P038-phieu-cleanup-and-safety.md
phieu/done/: P035-orchestrator-hardening.md  (+4 more)
recipes/: README.md  _TEMPLATE.md
scripts/: architect-guard.sh  session-start-banner.sh  sync-personal-agents.sh
templates/: BACKLOG_template.md  claude-settings.local.json
(+16 files in other folders)
