[package]
name = "sos"
version = "0.1.0"
edition = "2021"
description = "SOS Kit 0→1 bootstrap — vision/blueprint/contract/apply/launch"
license = "MIT"

[[bin]]
name = "sos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
walkdir = "2"
